# audio-plugins

./: Cargo.toml  Contributing.md  Dockerfile  LICENSE
.cargo/: config
plugins/man-kind/: Cargo.toml
plugins/man-kind/src/: editor.rs  lib.rs
