[package]
name = "man-kind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
atomic_float = "0.1.0"

nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = [
    "assert_process_allocs",
] }
nih_plug_iced = { git = "https://github.com/robbert-vdh/nih-plug.git" }
